--- a/PythonOOP.ipynb
+++ b/PythonOOP.ipynb
@@ -920,6 +920,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Decorators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Assigning Functions to Variables"
    ]
   },
@@ -1550,9 +1557,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "1\n4\n9\n"
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
     }
    ],
    "source": [
@@ -1575,9 +1586,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "1\n4\n9\n"
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
     }
    ],
    "source": [
