--- a/clean_code.ipynb
+++ b/clean_code.ipynb
@@ -1,25 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1600091528358",
-   "display_name": "Python 3.6.10 64-bit (conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -57,17 +36,21 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "10\n"
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "{'number': typing.Union[int, float], 'return': typing.Union[int, float]}"
+      "text/plain": [
+       "{'number': typing.Union[int, float], 'return': typing.Union[int, float]}"
+      ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -81,12 +64,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "{'lat': float, 'long': str}"
+      "text/plain": [
+       "{'lat': float, 'long': str}"
+      ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -102,12 +87,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(2, 5)"
+      "text/plain": [
+       "(2, 5)"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,9 +111,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "postgre 60\n"
+     "output_type": "stream",
+     "text": [
+      "postgre 60\n"
+     ]
     }
    ],
    "source": [
@@ -154,12 +143,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(1, 2, 1)"
+      "text/plain": [
+       "(1, 2, 1)"
+      ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "execution_count": 20
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,12 +186,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'john (30)'"
+      "text/plain": [
+       "'john (30)'"
+      ]
      },
+     "execution_count": 45,
      "metadata": {},
-     "execution_count": 45
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -213,12 +206,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'jane (25)'"
+      "text/plain": [
+       "'jane (25)'"
+      ]
      },
+     "execution_count": 46,
      "metadata": {},
-     "execution_count": 46
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -231,9 +226,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "KeyError",
      "evalue": "'name'",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
@@ -275,12 +270,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'john (30)'"
+      "text/plain": [
+       "'john (30)'"
+      ]
      },
+     "execution_count": 50,
      "metadata": {},
-     "execution_count": 50
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -293,12 +290,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'jane (25)'"
+      "text/plain": [
+       "'jane (25)'"
+      ]
      },
+     "execution_count": 51,
      "metadata": {},
-     "execution_count": 51
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -311,12 +310,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'john (30)'"
+      "text/plain": [
+       "'john (30)'"
+      ]
      },
+     "execution_count": 52,
      "metadata": {},
-     "execution_count": 52
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -324,31 +325,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Design by Contract\n",
     "1. Precondition\n",
     "2. Postcondition\n",
     "3. Invariants\n",
     "4. Side Effects\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Defensive Programming"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Seperation of Concerns"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Acronyms to live by\n",
     "1. DRY (Do not repeat yourself)\n",
@@ -357,16 +360,14 @@
     "4. KIS (Keep it Simple)\n",
     "5. EAFP (Easier to ask forgiveness then permission)\n",
     "6. LBYL (Look before you leap)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Python supports multiple inheritance"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -416,12 +417,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'module-1:test'"
+      "text/plain": [
+       "'module-1:test'"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -434,12 +437,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "['ConcreteModuleA12', 'BaseModule1', 'BaseModule2', 'BaseModule', 'object']"
+      "text/plain": [
+       "['ConcreteModuleA12', 'BaseModule1', 'BaseModule2', 'BaseModule', 'object']"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -447,11 +452,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Mixins\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -501,12 +506,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "['28a2320b', 'fd3f', '4627', '9792', 'a2b38e3c46b0']"
+      "text/plain": [
+       "['28a2320b', 'fd3f', '4627', '9792', 'a2b38e3c46b0']"
+      ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -528,12 +535,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "['28A2320B', 'FD3F', '4627', '9792', 'A2B38E3C46B0']"
+      "text/plain": [
+       "['28A2320B', 'FD3F', '4627', '9792', 'A2B38E3C46B0']"
+      ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -541,18 +550,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### All arguments are passed by value in Python"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Packing in Python"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -574,9 +583,13 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "1\n2\n3\n"
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
@@ -591,9 +604,13 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "1\n2\n3\n"
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
@@ -619,9 +636,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "{'key': 'value'}\n"
+     "output_type": "stream",
+     "text": [
+      "{'key': 'value'}\n"
+     ]
     }
    ],
    "source": [
@@ -629,6 +648,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## SOLID principle\n",
     "### S: Single responsibility principle \n",
@@ -651,17 +672,15 @@
     "\n",
     "The idea of inverting dependencies is that our code should not adapt to details or concrete implementations, but rather the other way around: we want to force whatever implementation or detail to adapt to our code via a sort of API.\n",
     "\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Decorator in short\n",
     "Functions and classes can be decorated"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -685,6 +704,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Decorator Use\n",
     "Transforming parameters: Changing the signature of a function to expose a nicer API, while encapsulating details on how the parameters are treated and transformed underneath \n",
@@ -696,19 +717,19 @@
     "Implement retry operations \n",
     "\n",
     "Simplify classes by moving some (repetitive) logic into decorators\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Generators\n",
     "In Python, the mere presence of the keyword yield in any function makes it a generator, and, as a result, when calling it, nothing other than creating an instance of the generator will happen:\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Python Concept- Iterable\n",
     "\n",
@@ -721,11 +742,11 @@
     "Magic method __next__ \n",
     "\n",
     "THe values can be obtained one by one via the built-in next()"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Coroutines\n",
     "\n",
@@ -734,20 +755,18 @@
     "They benefit from the ability to keep their data throughout their lifetime and, unlike functions, can have several entry points for suspending and resuming execution.\n",
     "\n",
     "Coroutines in Python work in a very similar way to Generators. Both operate over data, so let's keep the main differences simple:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "    Generators produce data\n",
     "\n",
     "    Coroutines consume data\n",
     "\n",
     "The distinct handling of the keyword yield determines whether we are manipulating one or the other."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -772,13 +791,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "If this were a normal Python function, one would expect it to produce some sort of output by this point. But if you run the code in its current state you will notice that not a single print() gets called.\n",
     "\n",
     "That is because coroutines require the next() method to be called first:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -788,9 +807,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "My first Coroutine!\n"
+     "output_type": "stream",
+     "text": [
+      "My first Coroutine!\n"
+     ]
     }
    ],
    "source": [
@@ -798,11 +819,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "This starts the execution of the coroutine until it reaches its first breakpoint - value = (yield). Then, it stops, returning the execution over to the main, and idles while awaiting new input:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -812,9 +833,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "First Value\n"
+     "output_type": "stream",
+     "text": [
+      "First Value\n"
+     ]
     }
    ],
    "source": [
@@ -829,9 +852,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Second Value\n"
+     "output_type": "stream",
+     "text": [
+      "Second Value\n"
+     ]
     }
    ],
    "source": [
@@ -848,13 +873,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Passing Arguments\n",
     "\n",
     "Much like functions, coroutines are also capable of receiving arguments:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -864,9 +889,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Marco, age:33\n"
+     "output_type": "stream",
+     "text": [
+      "Marco, age:33\n"
+     ]
     }
    ],
    "source": [
@@ -884,13 +911,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Applying Several Breakpoints\n",
     "\n",
     "Multiple yield statements can be sequenced together in the same individual coroutine:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -900,9 +927,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "So Far So Good\n"
+     "output_type": "stream",
+     "text": [
+      "So Far So Good\n"
+     ]
     }
    ],
    "source": [
@@ -919,13 +948,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The StopIteration Exception\n",
     "\n",
     "After a coroutine is closed, calling send() again will generate a StopIteration exception:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -935,9 +964,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Done with the basics\n"
+     "output_type": "stream",
+     "text": [
+      "Done with the basics\n"
+     ]
     }
    ],
    "source": [
@@ -962,6 +993,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Coroutines\n",
     "\n",
@@ -972,9 +1005,7 @@
     ".throw(ex_type[, ex_value[, ex_traceback]]) \n",
     "\n",
     ".send(value)\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -1046,11 +1077,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generators"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def PowTwoGen(max=0):\n",
+    "    n = 0\n",
+    "    while n < max:\n",
+    "        yield 2 ** n\n",
+    "        n += 1\n",
+    "\n",
+    "generator = PowTwoGen(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "Generator Limit Reached\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(next(generator))\n",
+    "    print(next(generator))\n",
+    "    print(next(generator))\n",
+    "    print(next(generator))\n",
+    "    print(next(generator))\n",
+    "except StopIteration:\n",
+    "    print(\"Generator Limit Reached\")"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
